added more text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,5 @@
     </head>
     <body>
         <h1>Run Buddy</h1>
-        What We Do 🏃
-    </body>
-</html>
+        What We Do 🏃 What You Do 🏃 Your Trainers Reach Out
+    </body>      
