--- a/index.html
+++ b/index.html
@@ -5,6 +5,39 @@
         <title>RUN BUDDY</title>
     </head>
     <body>
-        <h1>Run Buddy</h1>
-        What We Do 🏃 What You Do 🏃 Your Trainers Reach Out
+
+        <!-- Navigation -->
+        <header>
+            <h1>Run Buddy</h1>
+        <header>
+        
+        <!--Hero/Jumbotron-->
+        <section>
+
+        </section>
+
+        <!--What We do Section-->
+        <section>
+            <h2>What We Do 🏃</h2>  
+        </section>
+
+        <!--What You do Section-->
+        <section>
+            <h2>What You Do 🏃</h2>
+        </section>
+
+        <!--Meet the Trainers Section-->
+        <section>
+            <h2>Meet The Trainers 🏃</h2>
+        </section>
+
+        <!--Reach Out Section-->
+        <section>
+            <h2>Reach Out 🏃</h2>
+        </section>
+
+        <!--footer -->
+        <footer>
+            <h2>❤️ Made with love by Run Buddy.</h2>
+        </footer>
     </body>      
