--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>RUN BUDDY</title>
+        <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
 
@@ -30,7 +31,7 @@
                     </li>
                 </ul>
             </nav>
-        <header>
+        </header>
         
         <!--Hero/Jumbotron-->
         <section>
