--- a/index.html
+++ b/index.html
@@ -66,13 +66,40 @@
         <!--end of hero -->
 
         <!--What We do Section-->
-        <section>
+        <section id="what-we-do">
             <h2>What We Do 🏃</h2>  
+            <p>
+                butcher selfies chambray shabby chic chic gentrify readymade yr Echo Park XOX
+            </p>
         </section>
 
         <!--What You do Section-->
-        <section>
+        <section id="what-you-do">
             <h2>What You Do 🏃</h2>
+
+            <div>
+                <img src="./assets/images/step-1.svg" alt="" />
+                <h3>Step One: Fill Out THe Form Above.</h3>
+                <p>Are you here to build muscle, loose weight, or just feel good?</p>
+            </div>
+
+            <div>
+                <img src="./assets/images/step-2.svg" alt="" />
+                <h3>Step Two: Consult with One of Our Trainers.</h3>
+                <p>You're already here, so why not?</p>
+            </div>
+
+            <div>
+                <img src="./assets/images/step-3.svg" alt="" />
+                <h3>Step Three: Get Running.</h3>
+                <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+            </div>
+
+            <div>
+                <img src="./assets/images/step-4.svg" alt="" />
+                <h3>Step Four: See Results.</h3>
+                <p>Bi-weekely checkins with your trainer will keep you focused.</p>
+            </div>
         </section>
 
         <!--Meet the Trainers Section-->
