Style what we do dection

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
         <!--end of hero -->
 
         <!--What We do Section-->
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
             <h2>What We Do 🏃</h2>  
             <p>
-                butcher selfies chambray shabby chic chic gentrify readymade yr Echo Park XOX
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse eaque quam sit ullam! Voluptatem nisi dignissimos voluptates veniam cupiditate ea eveniet explicabo nobis accusamus asperiores exercitationem, enim eaque error cumque!
             </p>
         </section>
 
