--- a/index.html
+++ b/index.html
@@ -67,37 +67,37 @@
 
         <!--What We do Section-->
         <section id="what-we-do" class="intro">
-            <h2>What We Do 🏃</h2>  
+            <h2 class="section-title primary-border">What We Do 🏃</h2>  
             <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse eaque quam sit ullam! Voluptatem nisi dignissimos voluptates veniam cupiditate ea eveniet explicabo nobis accusamus asperiores exercitationem, enim eaque error cumque!
             </p>
         </section>
 
         <!--What You do Section-->
-        <section id="what-you-do">
-            <h2>What You Do 🏃</h2>
+        <section id="what-you-do" class="steps">
+            <h2 class="section-title secondary-border">What You Do 🏃</h2>
 
             <div>
                 <img src="./assets/images/step-1.svg" alt="" />
-                <h3>Step One: Fill Out THe Form Above.</h3>
+                <h3>Step One: <span>Fill Out Te Form Above.</span></h3>
                 <p>Are you here to build muscle, loose weight, or just feel good?</p>
             </div>
 
             <div>
                 <img src="./assets/images/step-2.svg" alt="" />
-                <h3>Step Two: Consult with One of Our Trainers.</h3>
+                <h3>Step Two: <span>Consult with One of Our Trainers.</span></h3>
                 <p>You're already here, so why not?</p>
             </div>
 
             <div>
                 <img src="./assets/images/step-3.svg" alt="" />
-                <h3>Step Three: Get Running.</h3>
+                <h3>Step Three: <span>Get Running.</span></h3>
                 <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
             </div>
 
             <div>
                 <img src="./assets/images/step-4.svg" alt="" />
-                <h3>Step Four: See Results.</h3>
+                <h3>Step Four: <span>See Results.</span></h3>
                 <p>Bi-weekely checkins with your trainer will keep you focused.</p>
             </div>
         </section>
