add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         
         <!--Hero/Jumbotron-->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Buliding Habbits</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, distinctio commodi fugit esse sapiente sint numquam dignissimos, dolorem nulla sunt modi facilis ratione tempore magnam repudiandae incidunt quam. Dolorem, sequi.
+                </p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
