--- a/index.html
+++ b/index.html
@@ -149,7 +149,19 @@
         <section id="reach-out" class="contact">
             <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3115.6184228970615!2d-121.35695084821644!3d38.65765327950816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ad92ccfe14d71%3A0xbbc0559bc071a7be!2sVillaggio!5e0!3m2!1sen!2sus!4v1632811051361!5m2!1sen!2sus" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe> 
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3115.6184228970615!2d-121.35695084821644!3d38.65765327950816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ad92ccfe14d71%3A0xbbc0559bc071a7be!2sVillaggio!5e0!3m2!1sen!2sus!4v1632811051361!5m2!1sen!2sus" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
+                </iframe> 
+                <div class="contact-form">
+                    <h3>Contact Us</h3>
+                    <form>
+                        <label for="contact-name">Your Name</label>
+                        <input type="text" id="contact-name" placeholder="Your Name" />
+                        <label for="contact-message">Message</label>
+                        <textarea id="contact-message" placeholder="Message"></textarea>
+
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
                 <div>
                     <h3>Run Buddy</h3>
                     <p>
