--- a/index.html
+++ b/index.html
@@ -73,10 +73,14 @@
 
         <!--What We do Section-->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>  
+            <div class="flex-row">
+            <h2 class="section-title primary-border">What We Do</h2>
+            </div>
+            <div class="flex-row"> 
             <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse eaque quam sit ullam! Voluptatem nisi dignissimos voluptates veniam cupiditate ea eveniet explicabo nobis accusamus asperiores exercitationem, enim eaque error cumque!
             </p>
+            </div>
         </section>
 
         <!--What You do Section-->
