--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
 
         <!--What You do Section-->
         <section id="what-you-do" class="steps">
+            <div class="flex-row">
             <h2 class="section-title secondary-border">What You Do</h2>
-
+            </div>
             <div>
                 <img src="./assets/images/step-1.svg" alt="" />
                 <h3>Step One: <span>Fill Out Te Form Above.</span></h3>
@@ -114,7 +115,9 @@
 
         <!--Meet the Trainers Section-->
         <section id="your-trainers" class="trainers">
+            <div class="flex-row">
             <h2 class="section-title primary-border">Meet The Trainers</h2>
+            </div>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio text-left">
@@ -151,7 +154,9 @@
 
         <!--Reach Out Section-->
         <section id="reach-out" class="contact">
+            <div class="flex-row">
             <h2 class="section-title secondary-border">Reach Out</h2>
+            </div>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3115.6184228970615!2d-121.35695084821644!3d38.65765327950816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ad92ccfe14d71%3A0xbbc0559bc071a7be!2sVillaggio!5e0!3m2!1sen!2sus!4v1632811051361!5m2!1sen!2sus" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy">
                 </iframe> 
